samples/_failures_safe/1761481515_b13896_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_80e91f77.c: In function ‘main’:
./samples/SAFE/__tmp_80e91f77.c:180:13: error: ‘t’ undeclared (first use in this function)
  180 |         if (t
      |             ^
./samples/SAFE/__tmp_80e91f77.c:180:13: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_80e91f77.c:180:14: error: expected ‘)’ at end of input
  180 |         if (t
      |            ~ ^
      |              )
./samples/SAFE/__tmp_80e91f77.c:180:9: error: expected declaration or statement at end of input
  180 |         if (t
      |         ^~
./samples/SAFE/__tmp_80e91f77.c:180:9: error: expected declaration or statement at end of input
